deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disruptive-guestbook
spec:
  type: ClusterIP # Default Type
  selector:
    app: disruptive-guestbook
  ports:
    - port: 80
      targetPort: 8080
