deploy/disruptive-guestbook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: disruptive-guestbook
  name: disruptive-guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disruptive-guestbook
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: disruptive-guestbook
    spec:
      containers:
      - image: hendrikstill/disruptive-guestbook
        name: disruptive-guestbook
        ports:
          - containerPort: 8080
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: disruptive-guestbook
  name: disruptive-guestbook
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: disruptive-guestbook
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: disruptive-guestbook
spec:
  rules:
    - host: gerry-1.tail812ea.ts.net
      http:
        paths:
          - backend:
              service:
                name: disruptive-guestbook
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
