deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disruptive-guestbook
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "disruptive.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: disruptive-guestbook
                port:
                  number: 80
